add pricing and quater styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing-page</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -48,29 +51,34 @@
           Build customer trust and look professional to grow your business
           faster.
         </p>
-        <button class="hero-button">Protect your business now!</button>
+        <button class="hero-button"><a href="https://app.tuta.com/signup#type=business&interval=12">Protect your business now!</a></button>
     </div>
         <img src="https://tuta.com/assets/hero-right-illust.Dw2O1fAp_Z20QjFC.webp" alt="Illustration of a businesswoman holding an email symbol in her right hand and doing a fist bump, surrounded by colleagues working on laptops and iPads.">
       </section>
 
-      <section>
-        <div>
+
+
+
+      <section class="pricing-section container">
+        <div class="pricing-section">
             <h2>Pricing</h2>
-<span class="icon plan-box__icon " style=""><svg aria-label="Essential" viewBox="0 0 38 35" fill="none" height="35" width="38" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="M25.25 5 20.732.677C20.226.16 19.534.002 19.005 0c-.532 0-1.226.157-1.736.674L.635 16.598a1.25 1.25 0 1 0 1.728 1.806L4 16.838v15.663a2.5 2.5 0 0 0 2.5 2.5H14c.69 0 1.25-.56 1.25-1.25V23.126a.625.625 0 0 1 .626-.625h6.25a.625.625 0 0 1 .625.625v10.625c0 .69.56 1.25 1.25 1.25h7.5a2.5 2.5 0 0 0 2.5-2.5V16.838l1.636 1.566a1.25 1.25 0 0 0 1.729-1.806L31.5 10.984V2.5c0-.69-.56-1.25-1.25-1.25H26.5c-.69 0-1.25.56-1.25 1.25zm6.25 9.445L19.025 2.503a.3.3 0 0 0-.05 0L6.499 14.445V32.5h6.25v-9.375a3.126 3.126 0 0 1 3.126-3.125h6.25a3.125 3.125 0 0 1 3.125 3.125v9.375h6.25zM29 3.75v4.84l-1.25-1.196V3.75z" fill-rule="evenodd" fill="#017085"></path></svg></span>
-<h3>Essential</h3>
-<p>For Freelancers</p>
-<span class="icon plan-box__icon " style=""><svg aria-label="Advanced" viewBox="0 0 38 35" fill="none" height="35" width="38" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="M4.082 3.11C4.965 1.184 6.974.001 9.119.001H28.88c2.145 0 4.154 1.183 5.037 3.11l3.383 7.385c1.136 2.478.048 5.075-2.05 6.354V32.5h1.25a1.25 1.25 0 1 1 0 2.5h-35a1.25 1.25 0 0 1 0-2.5h1.25v-15.65C.65 15.572-.437 12.975.7 10.497zM5.25 17.645v14.857h15V21.876a3.125 3.125 0 0 1 3.125-3.125h5a3.125 3.125 0 0 1 3.125 3.125v10.625h1.25V17.646a6 6 0 0 1-.273.013h-.152c-1.756 0-3.382-.763-4.442-1.993-1.06 1.23-2.686 1.993-4.442 1.993a5.87 5.87 0 0 1-4.414-2.023c-1.058 1.247-2.694 2.023-4.465 2.023a5.87 5.87 0 0 1-4.441-2.054 5.87 5.87 0 0 1-4.442 2.054h-.195a6 6 0 0 1-.234-.013m6.12-5.318c0 1.349 1.357 2.83 3.192 2.83 1.863 0 3.188-1.363 3.188-2.83a1.25 1.25 0 0 1 2.5 0c0 1.349 1.356 2.83 3.191 2.83 1.865 0 3.192-1.364 3.192-2.83a1.25 1.25 0 0 1 2.5 0c0 1.466 1.327 2.83 3.192 2.83h.131c2.158-.077 3.284-2.066 2.572-3.619l-3.383-7.386c-.44-.958-1.505-1.65-2.765-1.65H9.12c-1.26 0-2.326.692-2.765 1.65l-3.383 7.386c-.713 1.555.414 3.543 2.57 3.62h.137c1.836 0 3.19-1.479 3.19-2.83a1.25 1.25 0 0 1 2.5 0M29 32.502V21.876a.625.625 0 0 0-.625-.625h-5a.625.625 0 0 0-.625.625v10.625zM9.625 21.252a.625.625 0 0 0-.625.625v5.625h7.5v-5.625a.625.625 0 0 0-.625-.625zm-2.21-1.585a3.13 3.13 0 0 1 2.21-.916h6.25A3.125 3.125 0 0 1 19 21.877v6.875c0 .69-.56 1.25-1.25 1.25h-10c-.69 0-1.25-.56-1.25-1.25v-6.875c0-.828.329-1.623.915-2.21" fill-rule="evenodd" fill="#017085"></path></svg></span>
-<h3>Advanced</h3>
-<p>For Teams</p>
-<span class="icon plan-box__icon " style=""><svg aria-label="Unlimited" viewBox="0 0 38 35" fill="none" height="35" width="38" xmlns="http://www.w3.org/2000/svg"><path d="M8.96 24.06H4.87v2.357h4.09zM8.96 28.627H4.87v2.356h4.09zM33.043 24.06h-4.089v2.357h4.09zM33.043 28.627h-4.089v2.356h4.09zM18.538 24.454h-4.09v2.357h4.09zM23.581 24.454h-4.089v2.357h4.09zM18.538 20.238h-4.09v2.357h4.09zM23.581 20.238h-4.089v2.357h4.09zM18.538 16.022h-4.09v2.357h4.09zM23.581 16.022h-4.089v2.357h4.09z" fill="#017085"></path><path d="M36.168 20.238h-3.954V6.382a1.18 1.18 0 0 0-1.178-1.178H26.42V1.18A1.18 1.18 0 0 0 25.243 0H12.549a1.18 1.18 0 0 0-1.178 1.179v2.672L5.639 2.33a1.19 1.19 0 0 0-1.02.205c-.289.222-.461.57-.461.934v16.769H1.832a1.18 1.18 0 0 0-1.179 1.178v12.407c0 .65.529 1.178 1.179 1.178h34.335a1.18 1.18 0 0 0 1.179-1.178V21.416a1.18 1.18 0 0 0-1.178-1.178M24.063 2.358v2.845h-.694a1.18 1.18 0 0 0-1.179 1.179v4.734h-7.84V5.549c0-.442-.246-.838-.624-1.039V2.358zM6.514 13.262v-8.26l5.48 1.454v4.666a1.18 1.18 0 0 0-1.077 1.174v7.942H6.515v-6.975m-3.503 9.333h7.907v10.05H3.01zm21.798 10.05H13.274v-19.17H24.81zm-.26-21.528V7.56h5.308v12.677h-2.69v-7.942a1.18 1.18 0 0 0-1.18-1.179h-1.439m10.44 21.528h-7.822v-10.05h7.823z" fill="#017085"></path></svg></span>
-<h3>Unlimited</h3>
-<p>For Businesses</p>
+            <ul class="pricing-list">
+                <li><svg aria-label="Essential" viewBox="0 0 38 35" fill="none" height="35" width="38" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="M25.25 5 20.732.677C20.226.16 19.534.002 19.005 0c-.532 0-1.226.157-1.736.674L.635 16.598a1.25 1.25 0 1 0 1.728 1.806L4 16.838v15.663a2.5 2.5 0 0 0 2.5 2.5H14c.69 0 1.25-.56 1.25-1.25V23.126a.625.625 0 0 1 .626-.625h6.25a.625.625 0 0 1 .625.625v10.625c0 .69.56 1.25 1.25 1.25h7.5a2.5 2.5 0 0 0 2.5-2.5V16.838l1.636 1.566a1.25 1.25 0 0 0 1.729-1.806L31.5 10.984V2.5c0-.69-.56-1.25-1.25-1.25H26.5c-.69 0-1.25.56-1.25 1.25zm6.25 9.445L19.025 2.503a.3.3 0 0 0-.05 0L6.499 14.445V32.5h6.25v-9.375a3.126 3.126 0 0 1 3.126-3.125h6.25a3.125 3.125 0 0 1 3.125 3.125v9.375h6.25zM29 3.75v4.84l-1.25-1.196V3.75z" fill-rule="evenodd" fill="#017085"></path></svg>
+                    <h3>Essential</h3>
+                    <p>For Freelancers</p></li>
+                <li><svg aria-label="Advanced" viewBox="0 0 38 35" fill="none" height="35" width="38" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="M4.082 3.11C4.965 1.184 6.974.001 9.119.001H28.88c2.145 0 4.154 1.183 5.037 3.11l3.383 7.385c1.136 2.478.048 5.075-2.05 6.354V32.5h1.25a1.25 1.25 0 1 1 0 2.5h-35a1.25 1.25 0 0 1 0-2.5h1.25v-15.65C.65 15.572-.437 12.975.7 10.497zM5.25 17.645v14.857h15V21.876a3.125 3.125 0 0 1 3.125-3.125h5a3.125 3.125 0 0 1 3.125 3.125v10.625h1.25V17.646a6 6 0 0 1-.273.013h-.152c-1.756 0-3.382-.763-4.442-1.993-1.06 1.23-2.686 1.993-4.442 1.993a5.87 5.87 0 0 1-4.414-2.023c-1.058 1.247-2.694 2.023-4.465 2.023a5.87 5.87 0 0 1-4.441-2.054 5.87 5.87 0 0 1-4.442 2.054h-.195a6 6 0 0 1-.234-.013m6.12-5.318c0 1.349 1.357 2.83 3.192 2.83 1.863 0 3.188-1.363 3.188-2.83a1.25 1.25 0 0 1 2.5 0c0 1.349 1.356 2.83 3.191 2.83 1.865 0 3.192-1.364 3.192-2.83a1.25 1.25 0 0 1 2.5 0c0 1.466 1.327 2.83 3.192 2.83h.131c2.158-.077 3.284-2.066 2.572-3.619l-3.383-7.386c-.44-.958-1.505-1.65-2.765-1.65H9.12c-1.26 0-2.326.692-2.765 1.65l-3.383 7.386c-.713 1.555.414 3.543 2.57 3.62h.137c1.836 0 3.19-1.479 3.19-2.83a1.25 1.25 0 0 1 2.5 0M29 32.502V21.876a.625.625 0 0 0-.625-.625h-5a.625.625 0 0 0-.625.625v10.625zM9.625 21.252a.625.625 0 0 0-.625.625v5.625h7.5v-5.625a.625.625 0 0 0-.625-.625zm-2.21-1.585a3.13 3.13 0 0 1 2.21-.916h6.25A3.125 3.125 0 0 1 19 21.877v6.875c0 .69-.56 1.25-1.25 1.25h-10c-.69 0-1.25-.56-1.25-1.25v-6.875c0-.828.329-1.623.915-2.21" fill-rule="evenodd" fill="#017085"></path></svg>
+                    <h3>Advanced</h3>
+                    <p>For Teams</p></li>
+                <li><svg aria-label="Unlimited" viewBox="0 0 38 35" fill="none" height="35" width="38" xmlns="http://www.w3.org/2000/svg"><path d="M8.96 24.06H4.87v2.357h4.09zM8.96 28.627H4.87v2.356h4.09zM33.043 24.06h-4.089v2.357h4.09zM33.043 28.627h-4.089v2.356h4.09zM18.538 24.454h-4.09v2.357h4.09zM23.581 24.454h-4.089v2.357h4.09zM18.538 20.238h-4.09v2.357h4.09zM23.581 20.238h-4.089v2.357h4.09zM18.538 16.022h-4.09v2.357h4.09zM23.581 16.022h-4.089v2.357h4.09z" fill="#017085"></path><path d="M36.168 20.238h-3.954V6.382a1.18 1.18 0 0 0-1.178-1.178H26.42V1.18A1.18 1.18 0 0 0 25.243 0H12.549a1.18 1.18 0 0 0-1.178 1.179v2.672L5.639 2.33a1.19 1.19 0 0 0-1.02.205c-.289.222-.461.57-.461.934v16.769H1.832a1.18 1.18 0 0 0-1.179 1.178v12.407c0 .65.529 1.178 1.179 1.178h34.335a1.18 1.18 0 0 0 1.179-1.178V21.416a1.18 1.18 0 0 0-1.178-1.178M24.063 2.358v2.845h-.694a1.18 1.18 0 0 0-1.179 1.179v4.734h-7.84V5.549c0-.442-.246-.838-.624-1.039V2.358zM6.514 13.262v-8.26l5.48 1.454v4.666a1.18 1.18 0 0 0-1.077 1.174v7.942H6.515v-6.975m-3.503 9.333h7.907v10.05H3.01zm21.798 10.05H13.274v-19.17H24.81zm-.26-21.528V7.56h5.308v12.677h-2.69v-7.942a1.18 1.18 0 0 0-1.18-1.179h-1.439m10.44 21.528h-7.822v-10.05h7.823z" fill="#017085"></path></svg>
+                    <h3>Unlimited</h3>
+                    <p>For Businesses</p></li>
+            </ul>
       </div>
     </section>
 
-    <section>
-    <p>Tuta Mail is the world's first end-to-end encrypted email provider with post-quantum cryptography for your business. Our encryption protects your emails, attachments, and subject lines as well as calendars and contacts.</p>
-    <p>Focus on your business, we'll cover the email!</p>
+    <section class="quote-section container">
+    <p class="quote-p">Tuta Mail is the world's first end-to-end encrypted email provider with post-quantum cryptography for your business. Our encryption protects your emails, attachments, and subject lines as well as calendars and contacts.</p>
+    <p class="quote-p-signature">Focus on your business, we'll cover the email!</p>
 </section>
 
       <section>
@@ -82,7 +90,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-section">
       <p>Tuta Business</p>
     </footer>
   </body>
