--- a/index.html
+++ b/index.html
@@ -81,16 +81,19 @@
     <p class="quote-p-signature">Focus on your business, we'll cover the email!</p>
 </section>
 
-      <section>
-        <div>
-<h3>Call to action! It's time!</h3>
-<p>Sign up for our product by clicking that button right over there!</p>
-<button>Sign up</button>        
+      <section class="container">
+        <div class="action-section">
+        <div class="action ">
+<h3 >Call to action! It's time!</h3>
+<p >Sign up for our product by clicking that button right over there!</p>
 </div>
+
+<button class="action-button">Sign up</button>        
       </section>
+    </div>
     </main>
 
-    <footer class="footer-section">
+    <footer class="footer-section container">
       <p>Tuta Business</p>
     </footer>
   </body>
