edit pricing and quater section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <p >Sign up for our product by clicking that button right over there!</p>
 </div>
 
-<button class="action-button">Sign up</button>        
+<button class="action-button" target="_blank"><a href="https://app.tuta.com/?r=/signup#subscription">Sign up</a></button>        
       </section>
     </div>
     </main>
